vendor/bifrost/tls/bindings/ssl.odin


// The following constants are TLS cipher suite protocol IDs, as returned from
// |SSL_CIPHER_get_protocol_id|.
SSL_CIPHER_AES_128_GCM_SHA256                        :: 0x1301
SSL_CIPHER_AES_256_GCM_SHA384                        :: 0x1302
SSL_CIPHER_CHACHA20_POLY1305_SHA256                  :: 0x1303
SSL_CIPHER_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256       :: 0xc02b
SSL_CIPHER_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384       :: 0xc02c
SSL_CIPHER_ECDHE_RSA_WITH_AES_128_GCM_SHA256         :: 0xc02f
SSL_CIPHER_ECDHE_RSA_WITH_AES_256_GCM_SHA384         :: 0xc030
SSL_CIPHER_ECDHE_RSA_WITH_CHACHA20_POLY1305_SHA256   :: 0xcca8
SSL_CIPHER_ECDHE_ECDSA_WITH_CHACHA20_POLY1305_SHA256 :: 0xcca9
SSL_CIPHER_ECDHE_PSK_WITH_CHACHA20_POLY1305_SHA256   :: 0xccac
SSL_CIPHER_ECDHE_ECDSA_WITH_AES_128_CBC_SHA          :: 0xc009
SSL_CIPHER_ECDHE_ECDSA_WITH_AES_256_CBC_SHA          :: 0xc00a
SSL_CIPHER_ECDHE_RSA_WITH_AES_128_CBC_SHA            :: 0xc013
SSL_CIPHER_ECDHE_RSA_WITH_AES_256_CBC_SHA            :: 0xc014
SSL_CIPHER_ECDHE_PSK_WITH_AES_128_CBC_SHA            :: 0xc035
SSL_CIPHER_ECDHE_PSK_WITH_AES_256_CBC_SHA            :: 0xc036
SSL_CIPHER_ECDHE_ECDSA_WITH_AES_128_CBC_SHA256       :: 0xc023
SSL_CIPHER_ECDHE_RSA_WITH_AES_128_CBC_SHA256         :: 0xc027
SSL_CIPHER_RSA_WITH_AES_128_GCM_SHA256               :: 0x009c
SSL_CIPHER_RSA_WITH_AES_256_GCM_SHA384               :: 0x009d
SSL_CIPHER_RSA_WITH_AES_128_CBC_SHA                  :: 0x002f
SSL_CIPHER_RSA_WITH_AES_256_CBC_SHA                  :: 0x0035
SSL_CIPHER_PSK_WITH_AES_128_CBC_SHA                  :: 0x008c
SSL_CIPHER_PSK_WITH_AES_256_CBC_SHA                  :: 0x008d
SSL_CIPHER_RSA_WITH_3DES_EDE_CBC_SHA                 :: 0x000a

// The following constants are not cipher suites, but are used in the protocol
// as signalling values.
SSL_CIPHER_EMPTY_RENEGOTIATION_INFO_SCSV :: 0x00ff
SSL_CIPHER_FALLBACK_SCSV                 :: 0x5600

@(default_calling_convention="c")
foreign lib {
	// SSL_get_cipher_by_value returns the structure representing a TLS cipher
	// suite based on its assigned number, or NULL if unknown. See
	// https://www.iana.org/assignments/tls-parameters/tls-parameters.xhtml#tls-parameters-4.
	SSL_get_cipher_by_value :: proc(value: u16) -> ^SSL_CIPHER ---

	// SSL_CIPHER_get_protocol_id returns |cipher|'s two-byte protocol ID.
	SSL_CIPHER_get_protocol_id :: proc(cipher: ^SSL_CIPHER) -> u16 ---

	// SSL_CIPHER_is_aead returns one if |cipher| uses an AEAD cipher.
	SSL_CIPHER_is_aead :: proc(cipher: ^SSL_CIPHER) -> i32 ---

	// SSL_CIPHER_is_block_cipher returns one if |cipher| is a block cipher.
	SSL_CIPHER_is_block_cipher :: proc(cipher: ^SSL_CIPHER) -> i32 ---

	// SSL_CIPHER_get_cipher_nid returns the NID for |cipher|'s bulk
	// cipher. Possible values are |NID_aes_128_gcm|, |NID_aes_256_gcm|,
	// |NID_chacha20_poly1305|, |NID_aes_128_cbc|, |NID_aes_256_cbc|, and
	// |NID_des_ede3_cbc|.
	SSL_CIPHER_get_cipher_nid :: proc(cipher: ^SSL_CIPHER) -> i32 ---

	// SSL_CIPHER_get_digest_nid returns the NID for |cipher|'s HMAC if it is a
	// legacy cipher suite. For modern AEAD-based ciphers (see
	// |SSL_CIPHER_is_aead|), it returns |NID_undef|.
	//
	// Note this function only returns the legacy HMAC digest, not the PRF hash.
	SSL_CIPHER_get_digest_nid :: proc(cipher: ^SSL_CIPHER) -> i32 ---

	// SSL_CIPHER_get_kx_nid returns the NID for |cipher|'s key exchange. This may
	// be |NID_kx_rsa|, |NID_kx_ecdhe|, or |NID_kx_psk| for TLS 1.2. In TLS 1.3,
	// cipher suites do not specify the key exchange, so this function returns
	// |NID_kx_any|.
	SSL_CIPHER_get_kx_nid :: proc(cipher: ^SSL_CIPHER) -> i32 ---

	// SSL_CIPHER_get_auth_nid returns the NID for |cipher|'s authentication
	// type. This may be |NID_auth_rsa|, |NID_auth_ecdsa|, or |NID_auth_psk| for TLS
	// 1.2. In TLS 1.3, cipher suites do not specify authentication, so this
	// function returns |NID_auth_any|.
	SSL_CIPHER_get_auth_nid :: proc(cipher: ^SSL_CIPHER) -> i32 ---

	// SSL_CIPHER_get_handshake_digest returns |cipher|'s PRF hash. If |cipher|
	// is a pre-TLS-1.2 cipher, it returns |EVP_md5_sha1| but note these ciphers use
	// SHA-256 in TLS 1.2. Other return values may be treated uniformly in all
	// applicable versions.
	SSL_CIPHER_get_handshake_digest :: proc(cipher: ^SSL_CIPHER) -> ^EVP_MD ---

	// SSL_CIPHER_get_prf_nid behaves like |SSL_CIPHER_get_handshake_digest| but
	// returns the NID constant. Use |SSL_CIPHER_get_handshake_digest| instead.
	SSL_CIPHER_get_prf_nid :: proc(cipher: ^SSL_CIPHER) -> i32 ---

	// SSL_CIPHER_get_min_version returns the minimum protocol version required
	// for |cipher|.
	SSL_CIPHER_get_min_version :: proc(cipher: ^SSL_CIPHER) -> u16 ---

	// SSL_CIPHER_get_max_version returns the maximum protocol version that
	// supports |cipher|.
	SSL_CIPHER_get_max_version :: proc(cipher: ^SSL_CIPHER) -> u16 ---

	// SSL_CIPHER_standard_name returns the standard IETF name for |cipher|. For
	// example, "TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256".
	SSL_CIPHER_standard_name :: proc(cipher: ^SSL_CIPHER) -> cstring ---

	// SSL_CIPHER_get_kx_name returns a string that describes the key-exchange
	// method used by |cipher|. For example, "ECDHE_ECDSA". TLS 1.3 AEAD-only
	// ciphers return the string "GENERIC".
	SSL_CIPHER_get_kx_name :: proc(cipher: ^SSL_CIPHER) -> cstring ---

	// SSL_CIPHER_get_bits returns the strength, in bits, of |cipher|. If
	// |out_alg_bits| is not NULL, it writes the number of bits consumed by the
	// symmetric algorithm to |*out_alg_bits|.
	SSL_CIPHER_get_bits :: proc(cipher: ^SSL_CIPHER, out_alg_bits: ^i32) -> i32 ---

	// SSL_get_all_cipher_names outputs a list of possible strings
	// |SSL_CIPHER_get_name| may return in this version of BoringSSL. It writes at
	// most |max_out| entries to |out| and returns the total number it would have
	// written, if |max_out| had been large enough. |max_out| may be initially set
	// to zero to size the output.
	//
	// This function is only intended to help initialize tables in callers that want
	// possible strings pre-declared. This list would not be suitable to set a list
	// of supported features. It is in no particular order, and may contain
	// placeholder, experimental, or deprecated values that do not apply to every
	// caller. Future versions of BoringSSL may also return strings not in this
	// list, so this does not apply if, say, sending strings across services.
	SSL_get_all_cipher_names :: proc(out: ^cstring, max_out: c.size_t) -> c.size_t ---

	// SSL_get_all_standard_cipher_names outputs a list of possible strings
	// |SSL_CIPHER_standard_name| may return in this version of BoringSSL. It writes
	// at most |max_out| entries to |out| and returns the total number it would have
	// written, if |max_out| had been large enough. |max_out| may be initially set
	// to zero to size the output.
	//
	// This function is only intended to help initialize tables in callers that want
	// possible strings pre-declared. This list would not be suitable to set a list
	// of supported features. It is in no particular order, and may contain
	// placeholder, experimental, or deprecated values that do not apply to every
	// caller. Future versions of BoringSSL may also return strings not in this
	// list, so this does not apply if, say, sending strings across services.
	SSL_get_all_standard_cipher_names :: proc(out: ^cstring, max_out: c.size_t) -> c.size_t ---
}

// Cipher suite configuration.
//
// OpenSSL uses a mini-language to configure cipher suites. The language
// maintains an ordered list of enabled ciphers, along with an ordered list of
// disabled but available ciphers. Initially, all ciphers are disabled with a
// default ordering. The cipher string is then interpreted as a sequence of
// directives, separated by colons, each of which modifies this state.
//
// Most directives consist of a one character or empty opcode followed by a
// selector which matches a subset of available ciphers.
//
// Available opcodes are:
//
// - The empty opcode enables and appends all matching disabled ciphers to the
//   end of the enabled list. The newly appended ciphers are ordered relative to
//   each other matching their order in the disabled list.
//
// - |-| disables all matching enabled ciphers and prepends them to the disabled
//   list, with relative order from the enabled list preserved. This means the
//   most recently disabled ciphers get highest preference relative to other
//   disabled ciphers if re-enabled.
//
// - |+| moves all matching enabled ciphers to the end of the enabled list, with
//   relative order preserved.
//
// - |!| deletes all matching ciphers, enabled or not, from either list. Deleted
//   ciphers will not matched by future operations.
//
// A selector may be a specific cipher (using either the standard or OpenSSL
// name for the cipher) or one or more rules separated by |+|. The final
// selector matches the intersection of each rule. For instance, |AESGCM+aECDSA|
// matches ECDSA-authenticated AES-GCM ciphers.
//
// Available cipher rules are:
//
// - |ALL| matches all ciphers, except for deprecated ciphers which must be
//   named explicitly.
//
// - |kRSA|, |kDHE|, |kECDHE|, and |kPSK| match ciphers using plain RSA, DHE,
//   ECDHE, and plain PSK key exchanges, respectively. Note that ECDHE_PSK is
//   matched by |kECDHE| and not |kPSK|.
//
// - |aRSA|, |aECDSA|, and |aPSK| match ciphers authenticated by RSA, ECDSA, and
//   a pre-shared key, respectively.
//
// - |RSA|, |DHE|, |ECDHE|, |PSK|, |ECDSA|, and |PSK| are aliases for the
//   corresponding |k*| or |a*| cipher rule. |RSA| is an alias for |kRSA|, not
//   |aRSA|.
//
// - |3DES|, |AES128|, |AES256|, |AES|, |AESGCM|, |CHACHA20| match ciphers
//   whose bulk cipher use the corresponding encryption scheme. Note that
//   |AES|, |AES128|, and |AES256| match both CBC and GCM ciphers.
//
// - |SHA1|, and its alias |SHA|, match legacy cipher suites using HMAC-SHA1.
//
// Deprecated cipher rules:
//
// - |kEDH|, |EDH|, |kEECDH|, and |EECDH| are legacy aliases for |kDHE|, |DHE|,
//   |kECDHE|, and |ECDHE|, respectively.
//
// - |HIGH| is an alias for |ALL|.
//
// - |FIPS| is an alias for |HIGH|.
//
// - |SSLv3| and |TLSv1| match ciphers available in TLS 1.1 or earlier.
//   |TLSv1_2| matches ciphers new in TLS 1.2. This is confusing and should not
//   be used.
//
// Unknown rules are silently ignored by legacy APIs, and rejected by APIs with
// "strict" in the name, which should be preferred. Cipher lists can be long
// and it's easy to commit typos. Strict functions will also reject the use of
// spaces, semi-colons and commas as alternative separators.
//
// The special |@STRENGTH| directive will sort all enabled ciphers by strength.
//
// The |DEFAULT| directive, when appearing at the front of the string, expands
// to the default ordering of available ciphers.
//
// If configuring a server, one may also configure equal-preference groups to
// partially respect the client's preferences when
// |SSL_OP_CIPHER_SERVER_PREFERENCE| is enabled. Ciphers in an equal-preference
// group have equal priority and use the client order. This may be used to
// enforce that AEADs are preferred but select AES-GCM vs. ChaCha20-Poly1305
// based on client preferences. An equal-preference is specified with square
// brackets, combining multiple selectors separated by |. For example:
//
//   [TLS_ECDHE_ECDSA_WITH_CHACHA20_POLY1305_SHA256|TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256]
//
// Once an equal-preference group is used, future directives must be
// opcode-less. Inside an equal-preference group, spaces are not allowed.
//
// TLS 1.3 ciphers do not participate in this mechanism and instead have a
// built-in preference order. Functions to set cipher lists do not affect TLS
// 1.3, and functions to query the cipher list do not include TLS 1.3 ciphers.

// SSL_DEFAULT_CIPHER_LIST is the default cipher suite configuration. It is
// substituted when a cipher string starts with 'DEFAULT'.
SSL_DEFAULT_CIPHER_LIST :: "ALL"
